fix feature to live-currency-rates